[package]
name = "fuzzr"
version = "0.0.5"
authors = [
  "Hunter Trujillo <cryptoquick@pm.me>",
  "David Croisant <kn0wmad@protonmail.com>",
]
edition = "2018"
description = "P2P platform for publishing content, self-hosting, decentralized curation, and more."
documentation = "https://github.com/FuzzrNet/Fuzzr/tree/main/docs"
homepage = "https://fuzzr.net"
repository = "https://github.com/FuzzrNet/Fuzzr"
license = "Unlicense"
keywords = ["ipfs", "p2p", "gui", "self-hosted"]
categories = [
  "cryptography",
  "filesystem",
  "multimedia",
  "text-editors",
  "web-programming",
]
exclude = ["docs", ".github", ".vscode"]

[build]
incremental = true

[profile.release]
# strip = "symbols" # https://github.com/rust-lang/rust/issues/72110
lto = true
codegen-units = 1

[dependencies]
# Debugging
pretty_env_logger = "0.4"
log = "0.4"
anyhow = "1.0"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# System
async-std = "1.9"
rayon = "1.5"
crossbeam-utils = "0.8"
par-stream = { version = "0.3", features = ["runtime_async-std"] }
directories-next = "2.0"
lockfree = "0.5"
# UI
iced = { version = "0.3", features = ["wgpu", "default_system_font", "image", "async-std"] }
iced_native = "0.4"
iced_futures = "0.3"
# Data
# reqwest = "0.10"
image = "0.23"
infer = "0.4"
walkdir = "2.3"
# IPFS
ipfs-embed = "0.19"
libipld = "0.11"

# ipld-collections = "0.3.0"
[dev-dependencies]
tempfile = "3.1"
criterion = "0.3"

[[bin]]
name = "fuzzr"
test = true
bench = false
#
# [[bench]]
# name = "ipfs"
# harness = false
