[package]
name = "fuzzr"
version = "0.0.5"
authors = [
  "Hunter Trujillo <cryptoquick@pm.me>",
  "David Croisant <kn0wmad@protonmail.com>",
]
edition = "2018"
description = "P2P platform for publishing content, self-hosting, decentralized curation, and more."
documentation = "https://github.com/FuzzrNet/Fuzzr/tree/main/docs"
homepage = "https://fuzzr.net"
repository = "https://github.com/FuzzrNet/Fuzzr"
license = "Unlicense"
keywords = ["ipfs", "p2p", "gui", "self-hosted"]
categories = [
  "cryptography",
  "filesystem",
  "multimedia",
  "text-editors",
  "web-programming",
]
exclude = ["docs", ".github", ".vscode"]

[build]
incremental = true

[profile.release]
# strip = "symbols" # https://github.com/rust-lang/rust/issues/72110
lto = true
codegen-units = 1

[dependencies]
## Debugging
pretty_env_logger = "0.4.0"
log = "0.4"
anyhow = "1.0"
## Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
## System
async-std = "1.9.0"
rayon = "1.5.0"
crossbeam-utils = "0.8.4"
par-stream = { version = "0.3.1", features = ["runtime_async-std"] }
directories-next = "2.0.0"
lockfree = "0.5.1"
## UI
iced = { version = "0.3.0", features = ["wgpu", "default_system_font", "image", "async-std"] }
iced_native = "0.4.0"
iced_futures = "0.3.0"
## Data
# reqwest = "0.10"
infer = "0.4.0"
walkdir = "2.3.2"
## IPFS
ipfs-embed = "0.19.0"
libipld = "0.11.0"
# ipld-collections = "0.3.0"
## Image
image = "0.23"
img_hash = "3.1.1"
hamming = "0.1.3"
bk-tree = "0.3.0"

[dev-dependencies]
tempfile = "3.2.0"
criterion = "0.3.4"

[[bin]]
name = "fuzzr"
test = true
bench = false
#
# [[bench]]
# name = "ipfs"
# harness = false
